--- a/git/formuladb-env/frmdb-apps/restaurant/luxurious-restaurant.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/luxurious-restaurant.html
@@ -5,21 +5,16 @@
     <meta name="author" content="">
     <meta name="description" content="">
     <meta name="frmdb_display_date" content="">
-    <meta name="frmdb_featured_page_order" content="">
-    <meta name="frmdb_look" content="lux">
-    <meta name="frmdb_primary_color" content="ffc208">
-    <meta name="frmdb_secondary_color" content="353b41">
-    <meta name="frmdb_theme" content="Frames">
 </head>
 <body class="frmdb-editor-normal">
     <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/52e4dc4a4f50b108f5d08460c6293e76143ddfe44e507441732d7cd79049c1_1280.jpg&quot;);" class="">
+    <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/luxurious-restaurant_52e4dc4a4f50b108f5d08460c6293e76143ddfe44e507441732d7cd79049c1_1280.jpg&quot;);" class="">
         <frmdb-t-main class="">
-            <div class="jumbotron col-12 col-lg-8">
-                <h6 class="text-white">Subtitle of app, can be a bit longer in words</h6>
-                <h1 class="display-4 text-white" style="">Luxury Fine Dining</h1>
+            <div class="jumbotron">
+                <h6>Subtitle of app, can be a bit longer in words</h6>
+                <h1 class="display-4">Title of web app</h1>
                 <p>Lead paragraph providing a short introduction to you website or app,
                     <br>it would be good to keep it under two lines of text
                 </p>
@@ -39,7 +34,7 @@
         </div>
         <frmdb-t-card-deck class="frmdb-cards-4">
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e9d7454356aa14f6da8c7dda2936771d3edce4524c704c7d2979d3944acd5f_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/luxurious-restaurant_57e9d7454356aa14f6da8c7dda2936771d3edce4524c704c7d2979d3944acd5f_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
                     <h5>Card 1 title</h5>
                     <h6>Card 1 subtitle</h6>
@@ -55,7 +50,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/52e9d6454356ab14f6da8c7dda2936771d3edce4524c704c7d2979d3924bcd5c_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/luxurious-restaurant_52e9d6454356ab14f6da8c7dda2936771d3edce4524c704c7d2979d3924bcd5c_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
                     <h5>Card 2 title</h5>
                     <h6>Card 2 subtitle</h6>
@@ -71,7 +66,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/54e5d24b4e56aa14f6da8c7dda2936771d3edce4524c704c7d2979d39245c451_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/luxurious-restaurant_54e5d24b4e56aa14f6da8c7dda2936771d3edce4524c704c7d2979d39245c451_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
                     <h5>Card 3 title</h5>
                     <h6>Card 3 subtitle</h6>
@@ -87,7 +82,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/50e9d4404355b108f5d08460c6293e76143ddfe44e507441732d7ed5974cc2_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/luxurious-restaurant_50e9d4404355b108f5d08460c6293e76143ddfe44e507441732d7ed5974cc2_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
                     <h5>Card 4 title</h5>
                     <h6>Card 4 subtitle</h6>
@@ -105,7 +100,7 @@
         </frmdb-t-card-deck>
         <frmdb-t-section-divider></frmdb-t-section-divider>
     </section>
-    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/5fe4dc464e55b108f5d08460c6293e76143ddfe44e507441732d7cd29748cd_1280.jpg&quot;);" class="">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/luxurious-restaurant_5fe4dc464e55b108f5d08460c6293e76143ddfe44e507441732d7cd29748cd_1280.jpg&quot;);" class="">
         <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2 id="themeiconcards">Cards with Icons</h2>
@@ -161,14 +156,14 @@
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
-                    <h2 id="mediasectionminorleft" class="text-white">Section Heading</h2>
+                    <h2 id="mediasectionminorleft">Section Heading</h2>
                     <p>Etiam porta magna eu rutrum rhoncus. Sed ut tempor nibh. Nullam tempus egestas ullamcorper. Proin sollicitudin diam vel risus egestas, in
                         fringilla ligula finibus.</p>
                     <a class="btn btn-primary mx-auto" href="javascript:void(0)">Call to Action</a>
                 </div>
             </div>
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/54e4d0404952ab14f6da8c7dda2936771d3edce4524c704c7d2979d3954ac25c_1280.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/luxurious-restaurant_54e4d0404952ab14f6da8c7dda2936771d3edce4524c704c7d2979d3954ac25c_1280.jpg" alt="...">
             </div>
         </div>
         <frmdb-t-section-divider></frmdb-t-section-divider>
@@ -177,11 +172,11 @@
         <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/54e6d5434357a814f6da8c7dda2936771d3edce4524c704c7d2979d3944fc051_1280.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/luxurious-restaurant_54e6d5434357a814f6da8c7dda2936771d3edce4524c704c7d2979d3944fc051_1280.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
-                    <h2 id="mediasectionminorright" class="text-white">Section Heading</h2>
+                    <h2 id="mediasectionminorright">Section Heading</h2>
                     <p>Pretium quis neque a faucibus. Quisque tempus pharetra tellus, sed molestie velit mattis ut. Suspendisse feugiat ligula dui, at
                         convallis turpis auctor et. Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula.</p>
                     <a class="btn btn-primary mx-auto" href="javascript:void(0)">Call to Action</a>
@@ -195,14 +190,14 @@
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
-                    <h2 id="mediasectionminorleft" class="text-white">Section Heading</h2>
+                    <h2 id="mediasectionminorleft">Section Heading</h2>
                     <p>Etiam porta magna eu rutrum rhoncus. Sed ut tempor nibh. Nullam tempus egestas ullamcorper. Proin sollicitudin diam vel risus egestas, in
                         fringilla ligula finibus.</p>
                     <a class="btn btn-primary mx-auto" href="javascript:void(0)">Call to Action</a>
                 </div>
             </div>
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/54e2d5404c55ad14f6da8c7dda2936771d3edce4524c704c7d2979d3954ac25c_1280.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/luxurious-restaurant_54e2d5404c55ad14f6da8c7dda2936771d3edce4524c704c7d2979d3954ac25c_1280.jpg" alt="...">
             </div>
         </div>
         <frmdb-t-section-divider></frmdb-t-section-divider>
@@ -210,15 +205,6 @@
     <frmdb-t-section-divider></frmdb-t-section-divider>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
 </body>
 </html>
 </html>
