--- a/git/formuladb-env/frmdb-apps/restaurant/baking-bread.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/baking-bread.html
@@ -10,11 +10,11 @@
     <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/52e9d0444c55a514f6da8c7dda2936771d3edce4524c704c7d2979d3954ec05a_1280.jpg&quot;);   background-position: center center, center center, center bottom;" class="">
+    <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/baking-bread_52e9d0444c55a514f6da8c7dda2936771d3edce4524c704c7d2979d3954ec05a_1280.jpg&quot;);   background-position: center center, center center, center bottom;" class="">
         <frmdb-t-main class="">
             <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
-                <h1 class="display-4" contenteditable="true" spellchecker="false">Breaking Bread</h1>
+                <h1 class="display-4">Title of web app</h1>
                 <p>Lead paragraph providing a short introduction to you website or app,
                     <br>it would be good to keep it under two lines of text
                 </p>
@@ -32,7 +32,7 @@
         </div>
         <frmdb-t-card-deck class="frmdb-cards-4">
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e2dd424a57af14f6da8c7dda2936771d3edce4524c704c7d2979d3924bcd5c_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/baking-bread_57e2dd424a57af14f6da8c7dda2936771d3edce4524c704c7d2979d3924bcd5c_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
                     <h5 class="">Card 1 title</h5>
                     <h6 class="">Card 1 subtitle</h6>
@@ -48,7 +48,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e0d4454954b108f5d08460c6293e76143ddfe44e507441732d7cd19545c6_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/baking-bread_57e0d4454954b108f5d08460c6293e76143ddfe44e507441732d7cd19545c6_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
                     <h5 class="">Card 2 title</h5>
                     <h6 class="">Card 2 subtitle</h6>
@@ -64,7 +64,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/54e3d4404e54ae14f6da8c7dda2936771d3edce4524c704c7d2979d3924fcd5b_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/baking-bread_54e3d4404e54ae14f6da8c7dda2936771d3edce4524c704c7d2979d3924fcd5b_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
                     <h5 class="">Card 3 title</h5>
                     <h6 class="">Card 3 subtitle</h6>
@@ -80,7 +80,7 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e4d6404f53a514f6da8c7dda2936771d3edce4524c704c7d2979d3924bc05f_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/baking-bread_57e4d6404f53a514f6da8c7dda2936771d3edce4524c704c7d2979d3924bc05f_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
                     <h5 class="">Card 4 title</h5>
                     <h6 class="">Card 4 subtitle</h6>
@@ -98,7 +98,7 @@
         </frmdb-t-card-deck>
         <frmdb-t-section-divider class=""></frmdb-t-section-divider>
     </section>
-    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/5fe4d6414e57b108f5d08460c6293e76143ddfe44e507441732d7cd19545c6_1280.jpg&quot;);" class="">
+    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/baking-bread_5fe4d6414e57b108f5d08460c6293e76143ddfe44e507441732d7cd19545c6_1280.jpg&quot;);" class="">
         <frmdb-t-section-divider class=""></frmdb-t-section-divider>
         <div class="container py-5">
             <div class="row py-5">
@@ -116,7 +116,7 @@
         <frmdb-t-section-divider class=""></frmdb-t-section-divider>
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/5ee2d4464a51b108f5d08460c6293e76143ddfe44e507441732d7cd19545c6_1280.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/baking-bread_5ee2d4464a51b108f5d08460c6293e76143ddfe44e507441732d7cd19545c6_1280.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
@@ -129,7 +129,7 @@
         </div>
         <frmdb-t-section-divider class=""></frmdb-t-section-divider>
     </section>
-    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e8d34b495baa14f6da8c7dda2936771d3edce4524c704c7d2979d3924ecd59_1280.jpg&quot;);" class="">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/baking-bread_57e8d34b495baa14f6da8c7dda2936771d3edce4524c704c7d2979d3924ecd59_1280.jpg&quot;);" class="">
         <frmdb-t-section-divider class=""></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2 id="themeiconcards">Cards with Icons</h2>
@@ -192,7 +192,7 @@
                 </div>
             </div>
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/52e0d240495baf14f6da8c7dda2936771d3edce4524c704c7d2979d39248c358_1280.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/baking-bread_52e0d240495baf14f6da8c7dda2936771d3edce4524c704c7d2979d39248c358_1280.jpg" alt="...">
             </div>
         </div>
         <frmdb-t-section-divider class=""></frmdb-t-section-divider>
@@ -200,7 +200,6 @@
     <frmdb-t-section-divider></frmdb-t-section-divider>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
-    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
     <frmdb-fe></frmdb-fe>
 </body>
 </html>
