--- a/git/formuladb-env/frmdb-apps/restaurant/pizza-time.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/pizza-time.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <title>FormulaDB Themes</title>
-    <meta name="author" content="alex">
+    <meta name="author" content="">
     <meta name="description" content="">
     <meta name="frmdb_display_date" content="">
 </head>
-<body class="frmdb-editor-normal" data-fr="" data-frmdb-record="Restaurant_Order~~$AUTOID">
+<body class="frmdb-editor-normal">
     <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/55e0d544495ba914f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);" class="">
+    <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/pizza-time_55e0d544495ba914f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);" class="">
         <frmdb-t-main class="">
             <div class="jumbotron col-12 col-lg-8">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
@@ -18,10 +18,10 @@
                 <p>Lead paragraph providing a short introduction to you website or app,
                     <br>it would be good to keep it under two lines of text
                 </p>
-                <a href="order.html" class="btn btn-primary mx-auto">Menu</a>
+                <a href="javascript:void(0)" class="btn btn-primary mx-auto">MENU</a>
             </div>
         </frmdb-t-main>
-        <frmdb-t-aside class="" data-frmdb-record="Restaurant_Order~~$AUTOID">
+        <frmdb-t-aside class="">
             <div data-frmdb-fragment="_form.html"></div>
         </frmdb-t-aside>
         <frmdb-t-section-divider></frmdb-t-section-divider>
@@ -34,14 +34,14 @@
         </div>
         <frmdb-t-card-deck class="frmdb-cards-4">
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/52e8d544425aa814f6da8c7dda2936771d3edce4524c704c7d2979d2924ec35f_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/pizza-time_52e8d544425aa814f6da8c7dda2936771d3edce4524c704c7d2979d2924ec35f_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
                     <h5>NEW Pizza</h5>
                     <h6>Card 1 subtitle</h6>
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
                 <frmdb-t-card-action class="">
-                    <a href="order.html" class="">Order</a>
+                    <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
                     <span>INFO 
@@ -50,14 +50,14 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/5fe4d6414e57b108f5d08460c6293e76143ddfe44e507441732d7dd1964dc5_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/pizza-time_5fe4d6414e57b108f5d08460c6293e76143ddfe44e507441732d7dd1964dc5_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
                     <h5>Handmade</h5>
                     <h6>Card 2 subtitle</h6>
                     <p>Integer sit amet nisi viverra, pharetra nibh</p>
                 </div>
                 <frmdb-t-card-action class="">
-                    <a href="order.html" class="">Order</a>
+                    <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
                     <span>INFO 
@@ -66,14 +66,14 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/52e6dd434f57ad14f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/pizza-time_52e6dd434f57ad14f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
                     <h5>Fresh ingredients</h5>
                     <h6>Card 3 subtitle</h6>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
                 <frmdb-t-card-action class="">
-                    <a href="order.html" class="">Order</a>
+                    <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
                     <span>INFO 
@@ -82,14 +82,14 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e3d4444c5ba514f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/pizza-time_57e3d4444c5ba514f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);"></frmdb-t-img>
                 <div class="card-body">
                     <h5>Party Pizza</h5>
                     <h6>Card 4 subtitle</h6>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
                 <frmdb-t-card-action class="">
-                    <a href="order.html" class="">Order</a>
+                    <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
                 <frmdb-t-card-note class="">
                     <span>INFO 
@@ -100,7 +100,7 @@
         </frmdb-t-card-deck>
         <frmdb-t-section-divider></frmdb-t-section-divider>
     </section>
-    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/57e3d1474d50ac14f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);" class="frmdb-bg-2 frmdb-bg-2-dark-solid-tint-50">
+    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/pizza-time_57e3d1474d50ac14f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg&quot;);" class="">
         <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="container py-5">
             <div class="row py-5">
@@ -118,7 +118,7 @@
         <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/54e5dd4a4f55a914f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/pizza-time_54e5dd4a4f55a914f6da8c7dda2936771d3edce4524c704c7d2979d2924cc558_1280.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
@@ -131,7 +131,7 @@
         </div>
         <frmdb-t-section-divider></frmdb-t-section-divider>
     </section>
-    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/55e2dc464851b108f5d08460c6293e76143ddfe44e507441732d7dd1964dc5_1280.jpg&quot;);" class="">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/pizza-time_55e2dc464851b108f5d08460c6293e76143ddfe44e507441732d7dd1964dc5_1280.jpg&quot;);" class="">
         <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2 id="themeiconcards">PIZZA DELIVERED TO YOUR DOORSTEP</h2>
@@ -175,7 +175,7 @@
                 </div>
             </div>
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/52e2dd414b54a514f6da8c7dda2936771d3edce4524c704c7d2979d2924ec35f_1280.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/pizza-time_52e2dd414b54a514f6da8c7dda2936771d3edce4524c704c7d2979d2924ec35f_1280.jpg" alt="...">
             </div>
         </div>
         <frmdb-t-section-divider></frmdb-t-section-divider>
@@ -183,29 +183,7 @@
     <frmdb-t-section-divider></frmdb-t-section-divider>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
-    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-fe></frmdb-fe>
-    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    
 </body>
 </html>
 </html>
