finalize grouping of restaurant templates in one app

--- a/git/formuladb-env/frmdb-apps/restaurant/proper-stack-house.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/proper-stack-house.html
@@ -5,6 +5,7 @@
     <meta name="author" content="">
     <meta name="description" content="">
     <meta name="frmdb_display_date" content="">
+    <meta name="frmdb_featured_page_order" content="">
 </head>
 <body class="frmdb-editor-normal">
     <frmdb-t-main-nav class="">
@@ -118,7 +119,7 @@
         <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/base-app/static/section1.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/raw-baking_57e1d0464b51ae14f6da8c7dda2936771d3edce4524c704c7d2979d1974fc05e_1280.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
@@ -203,6 +204,7 @@
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
     <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
 </body>
 </html>
 </html>
