--- a/git/formuladb-env/frmdb-apps/restaurant/restaurat-good-food.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/restaurat-good-food.html
@@ -5,12 +5,17 @@
     <meta name="author" content="">
     <meta name="description" content="">
     <meta name="frmdb_display_date" content="">
+    <meta name="frmdb_featured_page_order" content="">
+    <meta name="frmdb_look" content="cerulean">
+    <meta name="frmdb_primary_color" content="d9230f">
+    <meta name="frmdb_secondary_color" content="ffffff">
+    <meta name="frmdb_theme" content="Lines">
 </head>
 <body class="frmdb-editor-normal">
     <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_50e9d542485ab108f5d08460c6293e76143ddfe44e507441732d7dd69145cd_1280.jpg&quot;);" class="">
+    <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_50e9d542485ab108f5d08460c6293e76143ddfe44e507441732d7dd69145cd_1280.jpg&quot;);; " class="">
         <frmdb-t-main class="">
             <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
@@ -27,7 +32,7 @@
         <frmdb-t-section-divider></frmdb-t-section-divider>
     </frmdb-t-cover>
     <section class="frmdb-section-light container py-5">
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
         <div class="text-center mb-5">
             <h2 id="thememediacards">Menu presentation</h2>
             <p>Section lead paragraph, some text about the content described in this section.</p>
@@ -35,11 +40,11 @@
         </div>
         <frmdb-t-card-deck class="frmdb-cards-4">
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_57e2d1454c5aaa14f6da8c7dda2936771d3edce4524c704c7d2979d2954cc358_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_57e2d1454c5aaa14f6da8c7dda2936771d3edce4524c704c7d2979d2954cc358_1280.jpg&quot;);; "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Breakfast Menu</h5>
-                    <h6>Card 1 subtitle</h6>
-                    <p>Quisque ornare, quam a blandit malesuada</p>
+                    <h5 class="">Breakfast Menu</h5>
+                    <h6 class="">Card 1 subtitle</h6>
+                    <p class="">Quisque ornare, quam a blandit malesuada</p>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
@@ -51,11 +56,11 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_5fe1dd474850b108f5d08460c6293e76143ddfe44e507441732d7dd69749c5_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_5fe1dd474850b108f5d08460c6293e76143ddfe44e507441732d7dd69749c5_1280.jpg&quot;);; "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Lunch Menu</h5>
-                    <h6>Card 2 subtitle</h6>
-                    <p>Integer sit amet nisi viverra, pharetra nibh</p>
+                    <h5 class="">Lunch Menu</h5>
+                    <h6 class="">Card 2 subtitle</h6>
+                    <p class="">Integer sit amet nisi viverra, pharetra nibh</p>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
@@ -67,11 +72,11 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_5fe1dd45495bb108f5d08460c6293e76143ddfe44e507441732d7dd69145cd_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_5fe1dd45495bb108f5d08460c6293e76143ddfe44e507441732d7dd69145cd_1280.jpg&quot;);; "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Dinner Menu</h5>
-                    <h6>Card 3 subtitle</h6>
-                    <p>Curabitur suscipit, massa eu maximus fringilla</p>
+                    <h5 class="">Dinner Menu</h5>
+                    <h6 class="">Card 3 subtitle</h6>
+                    <p class="">Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
@@ -83,11 +88,11 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_57e8d64a4b51a814f6da8c7dda2936771d3edce4524c704c7d2979d2954bcd50_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_57e8d64a4b51a814f6da8c7dda2936771d3edce4524c704c7d2979d2954bcd50_1280.jpg&quot;);; "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Drinks Menu</h5>
-                    <h6>Card 4 subtitle</h6>
-                    <p>Etiam porta magna eu rutrum rhoncus</p>
+                    <h5 class="">Drinks Menu</h5>
+                    <h6 class="">Card 4 subtitle</h6>
+                    <p class="">Etiam porta magna eu rutrum rhoncus</p>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
@@ -99,10 +104,10 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
         </frmdb-t-card-deck>
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
     </section>
-    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_50e9d4404355b108f5d08460c6293e76143ddfe44e507441732d7ed5974cc2_1280.jpg&quot;);" class="">
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_50e9d4404355b108f5d08460c6293e76143ddfe44e507441732d7ed5974cc2_1280.jpg&quot;);; " class="">
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
         <div class="container py-5">
             <div class="row py-5">
                 <div class="jumbotron col-md-5">
@@ -113,21 +118,21 @@
                 </div>
             </div>
         </div>
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
     </frmdb-t-media-section-main>
     <section class="frmdb-section-light container py-5">
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
         <div class="text-center mb-5">
             <h2 id="thememediacards">Cards with Images</h2>
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <frmdb-t-card-deck class="frmdb-cards-4">
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_55e0dd404955ab14f6da8c7dda2936771d3edce4524c704c7d2979d29545c35b_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_55e0dd404955ab14f6da8c7dda2936771d3edce4524c704c7d2979d29545c35b_1280.jpg&quot;);; "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Morning coffee</h5>
-                    <h6>Card 1 subtitle</h6>
-                    <p>Quisque ornare, quam a blandit malesuada</p>
+                    <h5 class="">Morning coffee</h5>
+                    <h6 class="">Card 1 subtitle</h6>
+                    <p class="">Quisque ornare, quam a blandit malesuada</p>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
@@ -139,11 +144,11 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_50e5d2404f50b108f5d08460c6293e76143ddfe44e507441732d7ed59f4fc1_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_50e5d2404f50b108f5d08460c6293e76143ddfe44e507441732d7ed59f4fc1_1280.jpg&quot;);; "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Cooking classes</h5>
-                    <h6>Card 2 subtitle</h6>
-                    <p>Integer sit amet nisi viverra, pharetra nibh</p>
+                    <h5 class="">Cooking classes</h5>
+                    <h6 class="">Card 2 subtitle</h6>
+                    <p class="">Integer sit amet nisi viverra, pharetra nibh</p>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
@@ -155,11 +160,11 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_5ee5dd474a53b108f5d08460c6293e76143ddfe44e507441732d7dd59549c1_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_5ee5dd474a53b108f5d08460c6293e76143ddfe44e507441732d7dd59549c1_1280.jpg&quot;);; "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Meet our bakers</h5>
-                    <h6>Card 3 subtitle</h6>
-                    <p>Curabitur suscipit, massa eu maximus fringilla</p>
+                    <h5 class="">Meet our bakers</h5>
+                    <h6 class="">Card 3 subtitle</h6>
+                    <p class="">Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
@@ -171,11 +176,11 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_50e9d54a4d57b108f5d08460c6293e76143ddfe44e507441732d7ed5974cc2_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_50e9d54a4d57b108f5d08460c6293e76143ddfe44e507441732d7ed5974cc2_1280.jpg&quot;);; "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Private meetings</h5>
-                    <h6>Card 4 subtitle</h6>
-                    <p>Etiam porta magna eu rutrum rhoncus</p>
+                    <h5 class="">Private meetings</h5>
+                    <h6 class="">Card 4 subtitle</h6>
+                    <p class="">Etiam porta magna eu rutrum rhoncus</p>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
@@ -187,10 +192,10 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
         </frmdb-t-card-deck>
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
     </section>
     <section class="frmdb-section-light container">
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
         <div class="row">
             <div class="col">
                 <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_51e9d4424e5bb108f5d08460c6293e76143ddfe44e507441732d7ed5974cc2_1280.jpg" alt="...">
@@ -204,10 +209,10 @@
                 </div>
             </div>
         </div>
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
     </section>
-    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_52e0d14b4850a914f6da8c7dda2936771d3edce4524c704c7d2979d2944dc55a_1280.jpg&quot;);" class="">
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/restaurat-good-food_52e0d14b4850a914f6da8c7dda2936771d3edce4524c704c7d2979d2944dc55a_1280.jpg&quot;);; " class="">
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2 id="themeiconcards">What we offer</h2>
             <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur.</p>
@@ -255,12 +260,13 @@
                 </frmdb-t-card-icon-main>
             </div>
         </div>
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
     </frmdb-t-section-cards-icon>
     <frmdb-t-section-divider></frmdb-t-section-divider>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
     <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
 </body>
 </html>
 </html>
