--- a/git/formuladb-env/frmdb-apps/restaurant/vivaldi-restaurant.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/vivaldi-restaurant.html
@@ -5,6 +5,11 @@
     <meta name="author" content="">
     <meta name="description" content="">
     <meta name="frmdb_display_date" content="">
+    <meta name="frmdb_featured_page_order" content="">
+    <meta name="frmdb_look" content="litera">
+    <meta name="frmdb_primary_color" content="008cba">
+    <meta name="frmdb_secondary_color" content="eeeeee">
+    <meta name="frmdb_theme" content="Frames">
 </head>
 <body class="frmdb-editor-normal">
     <frmdb-t-main-nav class="">
@@ -12,9 +17,9 @@
     </frmdb-t-main-nav>
     <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/vivaldi-restaurant_57e1d0464b51ae14f6da8c7dda2936771d3edce4524c704c7d2979d29f44c35b_1280.jpg&quot;);; ; ; ; ; " class="">
         <frmdb-t-main class="">
-            <div class="jumbotron">
+            <div class="jumbotron col-12 col-lg-8">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
-                <h1 class="display-4">Title of web app</h1>
+                <h1 class="display-4">Vivaldi Slow Food</h1>
                 <p>Lead paragraph providing a short introduction to you website or app,
                     <br>it would be good to keep it under two lines of text
                 </p>
@@ -106,7 +111,7 @@
         <div class="container py-5">
             <div class="row py-5">
                 <div class="jumbotron col-md-5">
-                    <h2 id="mediasectionmainleft">About our restaurant</h2>
+                    <h2 id="mediasectionmainleft" class="">About our restaurant</h2>
                     <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at,
                         tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
                     <a class="btn btn-primary mx-auto" href="javascript:void(0)">Call to Action</a>
@@ -123,7 +128,7 @@
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
-                    <h2 id="mediasectionminorright">Reservations</h2>
+                    <h2 id="mediasectionminorright" class="">Reservations</h2>
                     <p>Pretium quis neque a faucibus. Quisque tempus pharetra tellus, sed molestie velit mattis ut. Suspendisse feugiat ligula dui, at
                         convallis turpis auctor et. Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula.</p>
                     <a class="btn btn-primary mx-auto" href="javascript:void(0)">Call to Action</a>
@@ -137,7 +142,7 @@
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
-                    <h2 id="mediasectionminorleft">Vivaldi Steak Tradition</h2>
+                    <h2 id="mediasectionminorleft" class="">Vivaldi Steak Tradition</h2>
                     <p>Etiam porta magna eu rutrum rhoncus. Sed ut tempor nibh. Nullam tempus egestas ullamcorper. Proin sollicitudin diam vel risus egestas, in
                         fringilla ligula finibus.</p>
                     <a class="btn btn-primary mx-auto" href="javascript:void(0)">Call to Action</a>
@@ -153,6 +158,7 @@
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
     <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
 </body>
 </html>
 </html>
