--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -40,7 +40,7 @@
                 </button>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="screen-size-dropdown-toggle">
                     <a id="save-btn" class="dropdown-item">Save Page & Update App default look & feel</a>
-                    <a id="save-btn-single-page" class="dropdown-item">Save Page with specific look & feel</a>
+                    <a id="save-btn-single-page" class="dropdown-item">Save Page with specific look & feel, not matching the app</a>
                 </div>
             </div>
 
@@ -162,7 +162,7 @@
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" data-frmdb-table="$FRMDB.$Page[]" data-frmdb-editor-link data-frmdb-value="$FRMDB.$Page[].name"
-                        data-frmdb-table-limit="50" data-frmdb-attr="href:CONCATENATE('./', name, '.html?frmdbRender=editor'):$FRMDB.$Page[]"></a>
+                        data-frmdb-table-limit="50" data-frmdb-attr="href:IF(ISBLANK(template_url),CONCATENATE('/en/', ID(_id), '.html?frmdbRender=editor'),template_url):$FRMDB.$Page[]"></a>
                 </div>
             </li>
             <li class="nav-item dropdown frmdb-dropdown-hover">
