--- a/git/formuladb-env/frmdb-apps/restaurant/raw-baking.html
+++ b/git/formuladb-env/frmdb-apps/restaurant/raw-baking.html
@@ -5,12 +5,17 @@
     <meta name="author" content="">
     <meta name="description" content="">
     <meta name="frmdb_display_date" content="">
+    <meta name="frmdb_featured_page_order" content="">
+    <meta name="frmdb_look" content="cerulean">
+    <meta name="frmdb_primary_color" content="cb8670">
+    <meta name="frmdb_secondary_color" content="363636">
+    <meta name="frmdb_theme" content="Lines">
 </head>
 <body class="frmdb-editor-normal">
     <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/raw-baking_52e9d4434e53ab14f6da8c7dda2936771d3edce4524c704c7d2979d29449c751_1280.jpg&quot;);" class="">
+    <frmdb-t-cover style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/raw-baking_52e9d4434e53ab14f6da8c7dda2936771d3edce4524c704c7d2979d29449c751_1280.jpg&quot;);; " class="">
         <frmdb-t-main class="">
             <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
@@ -21,11 +26,13 @@
                 <a href="javascript:void(0)" class="btn btn-primary mx-auto">Call To Action</a>
             </div>
         </frmdb-t-main>
-        <frmdb-t-aside class=""></frmdb-t-aside>
+        <frmdb-t-aside class="">
+            <div data-frmdb-fragment="_form.html"></div>
+        </frmdb-t-aside>
         <frmdb-t-section-divider></frmdb-t-section-divider>
     </frmdb-t-cover>
     <section class="frmdb-section-light container py-5">
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
         <div class="text-center mb-5">
             <h2 id="thememediacards">Baking all day</h2>
             <p>Here are some of our&nbsp; specialities. You can also place an order online.&nbsp;</p>
@@ -33,11 +40,11 @@
         </div>
         <frmdb-t-card-deck class="frmdb-cards-4">
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/raw-baking_50e9d6454e57b108f5d08460c6293e76143ddfe44e507441732d7dd7934fcc_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/raw-baking_50e9d6454e57b108f5d08460c6293e76143ddfe44e507441732d7dd7934fcc_1280.jpg&quot;);; "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Card 1 title</h5>
-                    <h6>Card 1 subtitle</h6>
-                    <p>Quisque ornare, quam a blandit malesuada</p>
+                    <h5 class="">Card 1 title</h5>
+                    <h6 class="">Card 1 subtitle</h6>
+                    <p class="">Quisque ornare, quam a blandit malesuada</p>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
@@ -49,11 +56,11 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/raw-baking_55e3d3454e51ac14f6da8c7dda2936771d3edce4524c704c7d2979d29444c259_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/raw-baking_55e3d3454e51ac14f6da8c7dda2936771d3edce4524c704c7d2979d29444c259_1280.jpg&quot;);; "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Card 2 title</h5>
-                    <h6>Card 2 subtitle</h6>
-                    <p>Integer sit amet nisi viverra, pharetra nibh</p>
+                    <h5 class="">Card 2 title</h5>
+                    <h6 class="">Card 2 subtitle</h6>
+                    <p class="">Integer sit amet nisi viverra, pharetra nibh</p>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
@@ -65,11 +72,11 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/raw-baking_55e6d1424253ac14f6da8c7dda2936771d3edce4524c704c7d2979d29449c350_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/raw-baking_55e6d1424253ac14f6da8c7dda2936771d3edce4524c704c7d2979d29449c350_1280.jpg&quot;);; "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Card 3 title</h5>
-                    <h6>Card 3 subtitle</h6>
-                    <p>Curabitur suscipit, massa eu maximus fringilla</p>
+                    <h5 class="">Card 3 title</h5>
+                    <h6 class="">Card 3 subtitle</h6>
+                    <p class="">Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
@@ -81,11 +88,11 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
             <frmdb-t-card-media-main class="">
-                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/raw-baking_50e9d5434e52b108f5d08460c6293e76143ddfe44e507441732d7dd79f44c4_1280.jpg&quot;);"></frmdb-t-img>
+                <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/raw-baking_50e9d5434e52b108f5d08460c6293e76143ddfe44e507441732d7dd79f44c4_1280.jpg&quot;);; "></frmdb-t-img>
                 <div class="card-body">
-                    <h5>Card 4 title</h5>
-                    <h6>Card 4 subtitle</h6>
-                    <p>Etiam porta magna eu rutrum rhoncus</p>
+                    <h5 class="">Card 4 title</h5>
+                    <h6 class="">Card 4 subtitle</h6>
+                    <p class="">Etiam porta magna eu rutrum rhoncus</p>
                 </div>
                 <frmdb-t-card-action class="">
                     <a href="javascript:void(0)" class="">Action</a>
@@ -97,10 +104,10 @@
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
         </frmdb-t-card-deck>
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
     </section>
-    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/raw-baking_55e5d7474d57b108f5d08460c6293e76143ddfe44e507441732d7dd79f44c4_1280.jpg&quot;);" class="">
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/restaurant/static/raw-baking_55e5d7474d57b108f5d08460c6293e76143ddfe44e507441732d7dd79f44c4_1280.jpg&quot;);; " class="">
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
         <div class="container py-5">
             <div class="row py-5">
                 <div class="jumbotron col-md-5">
@@ -111,10 +118,10 @@
                 </div>
             </div>
         </div>
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
     </frmdb-t-media-section-main>
     <section class="frmdb-section-light container">
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
         <div class="row">
             <div class="col">
                 <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/raw-baking_54e8dd424b5bae14f6da8c7dda2936771d3edce4524c704c7d2979d2944ac35e_1280.jpg" alt="...">
@@ -129,10 +136,10 @@
                 </div>
             </div>
         </div>
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
     </section>
     <section class="frmdb-section-light container py-5 my-5">
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
@@ -146,12 +153,13 @@
                 <img class="img-fluid" src="/formuladb-env/frmdb-apps/restaurant/static/raw-baking_54e1d6454d56a514f6da8c7dda2936771d3edce4524c704c7d2979d29445cc59_1280.jpg" alt="...">
             </div>
         </div>
-        <frmdb-t-section-divider></frmdb-t-section-divider>
+        <frmdb-t-section-divider class=""></frmdb-t-section-divider>
     </section>
     <frmdb-t-section-divider></frmdb-t-section-divider>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
     <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
 </body>
 </html>
 </html>
